--- a/global.css
+++ b/global.css
@@ -13,3 +13,12 @@ html {
 	user-select: none;
 	font-family: overwatch;
 }
+
+h1 {
+	font-family: overwatch-italic;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    font-size: 50px;
+    color: #fff;
+    text-shadow: 0px 0px 3px #cecece;
+}
