--- a/overview/style.css
+++ b/overview/style.css
@@ -6,6 +6,7 @@ body {
     overflow: hidden;
 }
 .view {
+    position: absolute;
     width: 100vw;
     height: 100vh;
     max-height: calc(100vw * 9 / 16);
@@ -33,18 +34,10 @@ body {
     overflow: hidden;
 }
 #crop_a {
-    background-image: url("Hanamura A.png");
-    background-size: cover;
-    background-position: left;
-
     right: 50%;
     left: 0;
 }
 #crop_b {
-    background-image: url("Hanamura B.png");
-    background-size: cover;
-    background-position: right;
-
     right: 0;
     left: 50%;
 }
@@ -53,11 +46,22 @@ body {
     right: 0;
 }
 h1 {
-    margin: 20px 20px;
+    position: absolute;
+    top: 0;
+
+    margin: 0; /* because this margin would move the parrent element */
+    padding: 20px;
 }
 #crop_b h1 {
-    position: absolute;
     right: 0;
+}
+.heatmap-container {
+    width: 1280px;
+    height: 720px;
+}
+.heatmap-canvas {
+    width: 100%;
+    height: 100%;
 }
 #splitter {
     position: absolute;
