--- a/overview/style.css
+++ b/overview/style.css
@@ -2,67 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     overflow: hidden;
 }
-.view {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    max-height: calc(100vw * 9 / 16);
-    max-width: calc(100vh * 16 / 9);
-}
-#map {
-    margin: auto;
-    position: absolute;
-    top: 0;
-    bottom:0;
-    left: 0;
-    right:0;
-}
-.fill {
-    position: absolute;
-    top: 0;
-    left: 0;
 
-    width: 100%;
-    height: 100%;
-}
-#crop_a, #crop_b {
-    position: absolute;
-    height: 100%;
-    overflow: hidden;
-}
-#crop_a {
-    right: 50%;
-    left: 0;
-}
-#crop_b {
-    right: 0;
-    left: 50%;
-}
-#crop_b .view {
-    position: absolute;
-    right: 0;
-}
-h1 {
-    position: absolute;
-    top: 0;
-
-    margin: 0; /* because this margin would move the parrent element */
-    padding: 20px;
-}
-#crop_b h1 {
-    right: 0;
-}
-.heatmap-container {
-    width: 1280px;
-    height: 720px;
-}
-.heatmap-canvas {
-    width: 100%;
-    height: 100%;
-}
 #splitter {
     position: absolute;
     left: 50%;
@@ -71,4 +15,128 @@ h1 {
     width: 1%;
     height: 100%;
     margin-left: -0.5%;
+}
+
+.view {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    max-height: calc(100vw * 9 / 16);
+    max-width: calc(100vh * 16 / 9);
+}
+
+#map {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom:0;
+    left: 0;
+    right:0;
+}
+
+.fill {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
+#crop_a, #crop_b {
+    position: absolute;
+    height: 100%;
+    overflow: hidden;
+}
+
+#crop_a {
+    right: 50%;
+    left: 0;
+}
+
+#crop_b {
+    right: 0;
+    left: 50%;
+}
+
+#crop_b .view {
+    position: absolute;
+    right: 0;
+}
+
+h1 {
+    margin: 0; /* because this margin would move the parrent element */
+    padding: 20px;
+}
+
+.heatmap-container {
+    width: 1280px;
+    height: 720px;
+}
+
+.heatmap-canvas {
+    width: 100%;
+    height: 100%;
+}
+
+.stats {
+    position: absolute;
+    top: 0;
+    padding: 0.5vw;
+}
+
+#crop_a .stats {
+    background: linear-gradient(
+        to right bottom,
+        rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)
+    );
+}
+
+#crop_b .stats {
+    right: 0;
+    text-align: right;
+    background: linear-gradient(
+        to left bottom,
+        rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)
+    );
+}
+
+.stat-box {
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 5vw;
+    height: 4vw;
+    text-align: center;
+    padding-top: 1vw;
+}
+
+.stat-value {
+    color: #07cc0a;
+    font-size: 2vw;
+    font-family: overwatch-italic;
+}
+
+.stat-name {
+    color: #fff;
+    font-size: 0.6vw;
+}
+
+.up {
+    position: relative;
+    font-size: 0.7vw;
+    top: -1.4vw;
+    left: 0.3vw;
+}
+.up::after {
+    content: "⏶"
+}
+
+.down {
+    position: relative;
+    font-size: 0.7vw;
+    top: 0.4vw;
+    left: -0.2vw;
+}
+.down::after {
+    content: "🞃"
 }
