--- a/overview/style.css
+++ b/overview/style.css
@@ -111,9 +111,13 @@ h1 {
 }
 
 .stat-value {
-    color: #07cc0a;
+    color: #fff;
     font-size: 2vw;
     font-family: overwatch-italic;
+}
+
+.green {
+    color: #07cc0a;
 }
 
 .stat-name {
@@ -136,7 +140,4 @@ h1 {
     font-size: 0.7vw;
     top: 0.4vw;
     left: -0.2vw;
-}
-.down::after {
-    content: "🞃"
 }
