--- a/slide13/style.css
+++ b/slide13/style.css
@@ -70,6 +70,7 @@ select {
 
 svg {
 	position: absolute;
+    z-index: 1;
 }
 
 #ilinoisImage {
@@ -91,4 +92,9 @@ svg {
 .heatmap-canvas {
     width: 100%;
     height: 100%;
+}
+
+.tooltip {
+    text-shadow: 0px 0px 16px black;
+    font-size: 24px;
 }
